--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -15,18 +15,46 @@
       <div class="form-group mb-3">
         <label for="{{ form.username.id_for_label }}" class="form-label">ユーザー名</label>
         {{ form.username }}
+        {% if form.username.errors %}
+          <div class="text-danger">
+            {% for error in form.username.errors %}
+            <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
       <div class="form-group mb-3">
         <label for="{{ form.email.id_for_label }}" class="form-label">メールアドレス</label>
         {{ form.email }}
+        {% if form.email.errors %}
+          <div class="text-danger">
+            {% for error in form.email.errors %}
+            <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
       <div class="form-group mb-3">
         <label for="{{ form.tel_number.id_for_label }}" class="form-label">電話番号</label>
         {{ form.tel_number }}
+        {% if form.tel_number.errors %}
+          <div class="text-danger">
+            {% for error in form.tel_number.errors %}
+            <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
       <div class="form-group mb-3">
         <label for="{{ form.birth_date.id_for_label }}" class="form-label">生年月日</label>
         {{ form.birth_date }}
+        {% if form.birth_date.errors %}
+          <div class="text-danger">
+            {% for error in form.birth_date.errors %}
+            <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
       <button type="submit" class="w-100 btn btn-primary">登録する</button>
     </form>
