--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -35,6 +35,17 @@
         {% endif %}
       </div>
       <div class="form-group mb-3">
+        <label for="{{ form.password1.id_for_label }}" class="form-label">パスワード</label>
+        {{ form.password1 }}
+        {% if form.password1.errors %}
+          <div class="text-danger">
+            {% for error in form.password1.errors %}
+            <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
+      </div>
+      <div class="form-group mb-3">
         <label for="{{ form.tel_number.id_for_label }}" class="form-label">電話番号</label>
         {{ form.tel_number }}
         {% if form.tel_number.errors %}
@@ -58,5 +69,18 @@
       </div>
       <button type="submit" class="w-100 btn btn-primary">登録する</button>
     </form>
+    {% comment "" %}
+    {% if form.errors %}
+    <div class="alert alert-danger">
+      <ul>
+        {% for field, errors in form.errors.items %}
+        {% for error in errors %}
+        <li>{{ field }}: {{ error }}</li>
+        {% endfor %}
+        {% endfor %}
+      </ul>
+    </div>
+    {% endif %}
+    {% endcomment %}
   </div>
 {% endblock content %}
