--- a/templates/account/home.html
+++ b/templates/account/home.html
@@ -1,3 +1,20 @@
-<h1>ホームページです</h1>
-<p>自分の名前</p>
-<p>つぶやきボタン</p>
+{% extends "base.html" %}
+
+{% block title %}ホーム画面{% endblock title %}
+
+{% block content %}
+<div class="container">
+  <header class="d-flex align-items-center justify-content-between py-4 mb-4 border-bottom">
+    <div>
+      <span class="fs-4 fw-bold">ようこそ！{{ user.get_username }}さん</span>
+    </div>
+    <div class="d-flex gap-2">
+      <a href="#" class="btn btn-primary" role="button">つぶやく</a>
+      <form action="{% url "account_logout" %}" method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-dark">ログアウト</button>
+      </form>
+    </div>
+  </header>
+</div>
+{% endblock content %}
