--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,6 +8,9 @@
     <div>
       <span class="fs-4 fw-bold">ログイン画面</span>
     </div>
+    <div class="d-flex gap-2">
+      <a href="{% url "accounts:signup" %}" class="btn btn-dark" role="button">ユーザー登録</a>
+    </div>
   </header>
   <div class="mx-auto" style="max-width: 480px;">
     <form action="{% url "accounts:login" %}" method="POST">
