✨ Bootstrap-icons導入とgithubボタンの設置

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -39,5 +39,12 @@
       </div>
       <button type="submit" class="w-100 btn btn-primary">ログイン</button>
     </form>
+
+    <hr class="my-3">
+
+    <button type="submit" class="btn btn-dark w-100">
+      <i class="bi bi-github"></i>
+      <span class="ms-2">GitHubでログイン</span>
+    </button>
   </div>
 {% endblock content %}
