--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -72,5 +72,12 @@
       </div>
       <button type="submit" class="w-100 btn btn-primary">登録する</button>
     </form>
+
+    <hr class="my-3">
+
+    <button type="submit" class="btn btn-dark w-100">
+      <i class="bi bi-github"></i>
+      <span class="ms-2">GitHubで登録する</span>
+    </button>
   </div>
 {% endblock content %}
