--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% load socialaccount %}
 
 {% block title %}ユーザー登録画面{% endblock title %}
 
@@ -75,9 +75,10 @@
 
     <hr class="my-3">
 
-    <button type="submit" class="btn btn-dark w-100">
+    <a href="{% provider_login_url "github" process="login" %}" class="btn btn-dark w-100" role="button">
       <i class="bi bi-github"></i>
-      <span class="ms-2">GitHubで登録する</span>
-    </button>
+      <span> GitHubでログイン</span>
+    </a>
+
   </div>
 {% endblock content %}
