✨ トップページのURL設計とビュー・テンプレート作成

--- a/templates/tweets/index.html
+++ b/templates/tweets/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}ホーム画面{% endblock title %}
+{% block title %}トップページ{% endblock title %}
 
 {% block content %}
 <div class="container">
