--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     {% if messages %}
       {% include "_message.html" %}
     {% endif %}
+    {% include "_header.html" %}
     {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     {% block javascripts %}{% endblock javascripts %}
