--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>{% block title %}{% endblock %}</title>
   </head>
-  <body>
+  <body class="bg-dark text-dark">
     {% if messages %}
       {% include "_message.html" %}
     {% endif %}
-    {% include "_header.html" %}
-    {% block content %}{% endblock %}
+    <div class="container min-vh-100 d-flex flex-column">
+      {% include "_header.html" %}
+      <div class="d-flex flex-grow-1">
+        {% include "_sidebar.html" %}
+        {% block content %}{% endblock %}
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     {% block javascripts %}{% endblock javascripts %}
   </body>
