--- a/templates/tweets/index.html
+++ b/templates/tweets/index.html
@@ -1,20 +1,54 @@
 {% extends "base.html" %}
 
-{% block title %}トップページ{% endblock title %}
+{% block title %}ホームページ{% endblock title %}
 
 {% block content %}
-<div class="container">
-  <header class="d-flex align-items-center justify-content-between py-4 mb-4 border-bottom">
-    <div>
-      <span class="fs-4 fw-bold">ようこそ！{{ user.get_username }}さん</span>
+<div>
+  <div class="border-bottom p-1">
+    <ul class="nav text-center">
+      <li class="nav-item flex-fill">
+        <a class="nav-link text-white" href="#">おすすめ</a>
+      </li>
+      <li class="nav-item flex-fill">
+        <a class="nav-link text-white" href="#">フォロー中</a>
+      </li>
+    </ul>
+  </div>
+  <div class="px-2 border-bottom">
+    <div class="card border-0 bg-dark text-white">
+      <div class="card-body">
+        <div class="d-flex align-items-start">
+          <img
+            src="https://github.com/mdo.png"
+            alt="ユーザーイメージ"
+            width="48"
+            height="48"
+            class="rounded-circle me-3"
+          />
+          <div class="flex-grow-1">
+            <form>
+              <textarea
+                class="form-control"
+                placeholder="いまどうしてる？"
+                rows="3"
+              ></textarea>
+              <hr>
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <!-- 画像アイコン(非表示のinputと紐づいている) -->
+                  <label for="fileInput" style="cursor: pointer">
+                    <i class="bi bi-image text-primary"></i>
+                  </label>
+                  <!-- 非表示のファイル入力エリア -->
+                  <input type="file" id="fileInput" class="form-control d-none">
+                </div>
+                <button type="submit" class="btn btn-primary rounded-pill">ツイートする</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="d-flex gap-2">
-      <a href="#" class="btn btn-primary" role="button">つぶやく</a>
-      <form action="{% url "account_logout" %}" method="POST">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-dark">ログアウト</button>
-      </form>
-    </div>
-  </header>
+  </div>
 </div>
 {% endblock content %}
