--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,12 +4,9 @@
 
 {% block content %}
 <div class="container">
-  <header class="d-flex align-items-center justify-content-between py-4 mb-4 border-bottom">
+  <header class="d-flex align-items-center justify-content-between py-4 mb-4 border-bottom border-secondary">
     <div>
       <span class="fs-4 fw-bold">ログイン画面</span>
-    </div>
-    <div class="d-flex gap-2">
-      <a href="{% url "accounts:signup" %}" class="btn btn-dark" role="button">ユーザー登録</a>
     </div>
   </header>
   <div class="mx-auto" style="max-width: 480px;">
@@ -44,7 +41,7 @@
 
     <form action="{% provider_login_url "github" process="login" %}" method="POST">
     {% csrf_token %}
-      <button type="submit" class="btn btn-dark w-100">
+      <button type="submit" class="btn btn-secondary w-100">
         <i class="bi bi-github"></i>
         <span> GitHubでログイン</span>
       </button>
