--- a/templates/tweets/index.html
+++ b/templates/tweets/index.html
@@ -27,7 +27,7 @@
               @{{ tweet.user.username }}・{{ tweet.created_at|date:"m月d日 H:i" }}
             </small>
           </div>
-          <p>{{ tweet.content }}</p>
+          <div>{{ tweet.content }}</div>
           <!-- 投稿画像があれば表示 -->
           {% if tweet.resized_image_url %}
             <img src="{{ tweet.resized_image_url }}" alt="投稿画像}">
