--- a/templates/tweets/_tweetform.html
+++ b/templates/tweets/_tweetform.html
@@ -2,8 +2,8 @@
   <img
     src="https://github.com/mdo.png"
     alt="ユーザーイメージ"
-    width="48"
-    height="48"
+    width="40"
+    height="40"
     class="rounded-circle me-3"
   />
   <div class="flex-grow-1">
@@ -23,7 +23,7 @@
           <!-- 非表示のファイル入力エリア -->
           <input type="file" id="fileInput" class="form-control d-none">
         </div>
-        <button type="submit" class="btn btn-primary rounded-pill">ツイートする</button>
+        <button type="submit" class="btn btn-primary rounded-pill fw-bold px-3">ツイートする</button>
       </form>
     </div>
   </div>
