--- a/templates/tweets/index.html
+++ b/templates/tweets/index.html
@@ -13,12 +13,13 @@
   {% for tweet in tweet_list  %}
     <div class="p-2 border-bottom border-secondary">
       <div class="d-flex align-items-start">
+        <!-- TODO:ユーザーのプロフィール画像に変更する -->
         <img
           src="https://github.com/mdo.png"
           alt="ユーザーイメージ"
-          width="48"
-          height="48"
-          class="rounded-circle me-3"
+          width="40"
+          height="40"
+          class="rounded-circle me-2"
         />
         <div class="flex-grow-1">
           <div class="d-flex align-items-center gap-1">
