--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -28,10 +28,17 @@
       </a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link text-white">
-        <i class="bi bi-person me-2"></i>
-        <span>プロフィール</span>
-      </a>
+      {% if user.is_authenticated %}
+        <a href="{% url "profiles:user_profile" user.username %}" class="nav-link text-white">
+          <i class="bi bi-person me-2"></i>
+          <span>プロフィール</span>
+        </a>
+      {% else %}
+        <a href="{% url "accounts:login" %}" class="nav-link text-white">
+          <i class="bi bi-person me-2"></i>
+          <span>プロフィール</span>
+        </a>
+      {% endif %}
     </li>
   </ul>
   {% if user.is_authenticated %}
