--- a/templates/tweets/_tweet.html
+++ b/templates/tweets/_tweet.html
@@ -1,13 +1,15 @@
 <div class="p-2 border-bottom border-secondary">
   <div class="d-flex align-items-start">
     <!-- TODO:ユーザーのプロフィール画像に変更する -->
-    <img
-      src="https://github.com/mdo.png"
-      alt="ユーザーイメージ"
-      width="40"
-      height="40"
-      class="rounded-circle me-2"
-    />
+     <a href="{% url "profiles:user_profile" tweet.user.username %}">
+        <img
+          src="https://github.com/mdo.png"
+          alt="ユーザーイメージ"
+          width="40"
+          height="40"
+          class="rounded-circle me-2"
+        />
+     </a>
     <div class="flex-grow-1">
       <div class="d-flex align-items-center gap-1">
         <div class="fw-bold">{{ tweet.user.username }}</div>
