--- a/templates/tweets/_tweetform.html
+++ b/templates/tweets/_tweetform.html
@@ -1,11 +1,13 @@
 <div class="d-flex align-items-start">
-  <img
-    src="https://github.com/mdo.png"
-    alt="ユーザーイメージ"
-    width="40"
-    height="40"
-    class="rounded-circle me-3"
-  />
+  <a href="{% url "profiles:user_profile" user.username %}">
+    <img
+      src="https://github.com/mdo.png"
+      alt="ユーザーイメージ"
+      width="40"
+      height="40"
+      class="rounded-circle me-3"
+    />
+  </a>
   <div class="flex-grow-1">
     <form>
       <textarea
