--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -29,7 +29,7 @@
     </li>
     <li class="nav-item">
       {% if user.is_authenticated %}
-        <a href="{% url "profiles:user_profile" user.username %}" class="nav-link text-white">
+        <a href="{% url "profiles:my_tweet_list" user.username %}" class="nav-link text-white">
           <i class="bi bi-person me-2"></i>
           <span>プロフィール</span>
         </a>
