🎨 アイコン画像の有無に応じて表示が切り替わるようにする

--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -47,7 +47,7 @@
       <div class="d-flex align-items-start mt-5">
         <!-- TODO:ログインユーザーのプロフィール画像に変更する -->
         <img
-          src="https://github.com/mdo.png"
+          src="{{ user.icon_image_url }}"
           alt="{{ request.user.username }}のプロフィール画像"
           width="40"
           height="40"
