--- a/templates/profiles/_tweet.html
+++ b/templates/profiles/_tweet.html
@@ -3,7 +3,7 @@
     <!-- TODO:ユーザーのプロフィール画像に変更する -->
      <a href="{% url "profiles:my_tweet_list" tweet.user.username %}">
       <img
-        src="https://github.com/mdo.png"
+          src="{{ tweet.user.icon_image_url }}"
         alt="ユーザーイメージ"
         width="40"
         height="40"
