♻️ リファクタリング

--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -45,17 +45,16 @@
     <div class="px-2">
       <button type="submit" class="btn btn-primary rounded-pill px-5 py-2 fw-bold">ツイートする</button>
       <div class="d-flex align-items-start mt-5">
-        <!-- TODO:ログインユーザーのプロフィール画像に変更する -->
         <img
           src="{{ user.icon_image_url }}"
-          alt="{{ request.user.username }}のプロフィール画像"
+          alt="プロフィール画像"
           width="40"
           height="40"
           class="rounded-circle me-2"
         />
         <div>
-          <div class="fw-bold">{{ request.user.username }}</div>
-          <small class="text-secondary">@{{ request.user.username }}</small>
+          <div class="fw-bold">{{ user.username }}</div>
+          <small class="text-secondary">@{{ user.username }}</small>
         </div>
       </div>
     </div>
