--- a/templates/profiles/_tweet.html
+++ b/templates/profiles/_tweet.html
@@ -1,20 +1,25 @@
 <div class="p-2 border-bottom border-secondary">
   <div class="d-flex align-items-start">
-    <!-- TODO:ユーザーのプロフィール画像に変更する -->
      <a href="{% url "profiles:my_tweet_list" tweet.user.username %}">
       <img
           src="{{ tweet.user.icon_image_url }}"
-        alt="ユーザーイメージ"
-        width="40"
-        height="40"
-        class="rounded-circle me-2"
-      />
+          alt="ユーザーイメージ"
+          width="40"
+          height="40"
+          class="rounded-circle me-2"
+        />
      </a>
     <div class="flex-grow-1">
       <div class="d-flex align-items-center gap-1">
-        <div class="fw-bold">{{ tweet.user.username }}</div>
+        <div class="fw-bold">
+          {% if tweet.user.name %}
+            {{ tweet.user.name }}
+          {% else %}
+            {{ tweet.user.username }}
+          {% endif %}
+        </div>
         <small class="text-secondary">
-          @{{ tweet.user.username }}・{{ tweet.created_at|date:"m月d日 H:i" }}
+          @{{ tweet.user.username }}・{{ tweet.created_at|date:"n月d日 H:i" }}
         </small>
       </div>
       <div>{{ tweet.content }}</div>
