--- a/templates/profiles/_user_profile.html
+++ b/templates/profiles/_user_profile.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <!-- プロフィールヘッダー -->
 <div class="d-flex align-items-center px-3">
   <div style="min-width: 56px">
@@ -6,58 +7,96 @@
     </a>
   </div>
   <div>
-    <div class="fs-5 fw-bold">{{ user_profile.username }}</div>
+    <div class="fs-5 fw-bold">
+      {% if user_profile.name %}
+        {{ user_profile.name }}
+      {% else %}
+        {{ user_profile.username }}
+      {% endif %}
+    </div>
     <div class="text-secondary">
-      <span class="me-1">{{ user_profile.tweets.count }}</span>件のツイート
+      <span class="me-1">{{ user_profile.tweets.count|intcomma }}</span>件のツイート
     </div>
   </div>
 </div>
 <!-- ヘッダー画像 -->
-<div class="border-top border-bottom border-secondary">
-  <img
-    src={{ user_profile.header_image.url }}
-    class="img-fluid"
-    alt="ヘッダー画像"
-  >
+<div class="border-top border-bottom border-secondary" style="height: 200px;">
+  {% if user_profile.header_image %}
+    <img
+      src="{{ user_profile.header_image.url }}"
+      class="w-100 h-100 object-fit-cover"
+      alt="ヘッダー画像"
+    />
+  {% else %}
+    <div class="w-100 h-100 d-flex align-items-center justify-content-center bg-secondary">
+      <p class="m-0 text-white">ヘッダー画像が設定されていません</p>
+    </div>
+  {% endif %}
 </div>
+
 <!-- プロフィール内容 -->
 <div class="px-3 pt-2 mb-4">
   <div class="d-flex">
     <a href="#" class="btn btn-dark border border-secondary rounded-pill fw-bold px-3 ms-auto" role="button">プロフィールを編集</a>
   </div>
   <div>
+    <!-- プロフィール名とユーザー名 -->
     <div class="mb-3">
-      <div class="fs-4 fw-bold">{{ user_profile.username }}</div>
+      <div class="fs-4 fw-bold">
+        <div class="fs-4 fw-bold">
+          {% if user_profile.name %}
+            {{ user_profile.name }}
+          {% else %}
+            {{ user_profile.username }}
+          {% endif %}
+        </div>
+      </div>
       <div class="text-secondary">@{{ user_profile.username }}</div>
     </div>
-    <div class="mb-3">
-      石川県の金沢市に住んでいます。<br>
-      モダンな自社開発会社のWebエンジニアになりたいです。<br>
-      皆さん仲良くして下さい。
-    </div>
+
+    <!-- プロフィール文章 -->
+    {% if user_profile.description %}
+      <div class="mb-3">{{ user_profile.description|linebreaksbr }}</div>
+    {% endif %}
+
     <div class="mb-3 text-secondary">
       <div class="d-flex flex-wrap gap-2">
-        <div>
-          <i class="bi bi-geo-alt"></i>
-          <span>石川 金沢市</span>
-        </div>
-        <div>
-          <i class="bi bi-link-45deg"></i>
-          <a href="https://github.com/otaki0413">github.com/otaki0413</a>
-        </div>
-        <div>
-          <i class="bi bi-balloon"></i>
-          <span>誕生日: 1998年4月13日</span>
-        </div>
+        <!-- 場所 -->
+        {% if user_profile.location %}
+          <div>
+            <i class="bi bi-geo-alt"></i>
+            <span>{{ user_profile.location }}</span>
+          </div>
+        {% endif %}
+
+        <!-- Webサイト -->
+        {% if user_profile.website %}
+          <div>
+            <i class="bi bi-link-45deg"></i>
+            <span>{{ user_profile.website|urlize }}</span>
+          </div>
+        {% endif %}
+
+        <!-- 生年月日 -->
+        {% if user_profile.birth_date %}
+          <div>
+            <i class="bi bi-balloon"></i>
+            <span>誕生日: {{ user_profile.birth_date|date:"Y年n月j日" }}</span>
+          </div>
+        {% endif %}
+
+        <!-- 利用開始月について -->
         <div>
           <i class="bi bi-calendar3"></i>
-          <span>2024年4月からTwitterを利用しています</span>
+          <span>{{ user_profile.date_joined|date:"Y年n月" }}からTwitterを利用しています</span>
         </div>
       </div>
     </div>
+
+    <!-- フォロー・フォロワー数 -->
     <div class="d-flex gap-3 text-secondary">
-      <div><span class="fw-bold text-white me-1">311</span>フォロー中</div>
-      <div><span class="fw-bold text-white me-1">311</span>フォロワー</div>
+      <div><span class="fw-bold text-white me-1">{{ user_profile.following_relations.count|intcomma|default:0 }}</span>フォロー中</div>
+      <div><span class="fw-bold text-white me-1">{{ user_profile.follower_relations.count|intcomma|default:0 }}</span>フォロワー</div>
     </div>
   </div>
 </div>
