--- a/templates/profiles/my_tweets.html
+++ b/templates/profiles/my_tweets.html
@@ -15,7 +15,7 @@
   <!-- ツイート一覧エリア -->
   <div>
     {% for tweet in tweet_list %}
-      {% include "profiles/_tweet.html" with tweet=tweet %}
+      {% include "profiles/_tweet.html" %}
     {% endfor %}
   </div>
 </div>
