--- a/templates/tweets/_tweetform.html
+++ b/templates/tweets/_tweetform.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-start">
   <a href="{% url "profiles:my_tweet_list" user.username %}">
     <img
-      src="https://github.com/mdo.png"
+      src="{{ user.icon_image_url }}"
       alt="ユーザーイメージ"
       width="40"
       height="40"
