--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -53,7 +53,13 @@
           class="rounded-circle me-2"
         />
         <div>
-          <div class="fw-bold">{{ user.username }}</div>
+          <div class="fw-bold">
+            {% if user.name %}
+              {{ user.name }}
+            {% else %}
+              {{ user.username }}
+            {% endif %}
+          </div>
           <small class="text-secondary">@{{ user.username }}</small>
         </div>
       </div>
