--- a/templates/tweets/_tweetform.html
+++ b/templates/tweets/_tweetform.html
@@ -1,32 +1,41 @@
 <div class="d-flex align-items-start">
   <a href="{% url "profiles:my_tweet_list" user.username %}">
     <img
-      src="{{ user.icon_image_url }}"
-      alt="ユーザーイメージ"
-      width="40"
-      height="40"
-      class="rounded-circle me-3"
+    src="{{ user.icon_image_url }}"
+    alt="ユーザーイメージ"
+    width="40"
+    height="40"
+    class="rounded-circle me-3"
     />
   </a>
   <div class="flex-grow-1">
-    <form>
-      <textarea
-        class="form-control"
-        placeholder="いまどうしてる？"
-        rows="3"
-      ></textarea>
+    <form method="POST" action="{% url "tweets:tweet_create" %}" enctype="multipart/form-data" novalidate>
+      {% csrf_token %}
+      {{ form.content }}
+      {% if form.content.errors %}
+      <div class="text-danger">
+        {% for error in form.content.errors %}
+        <p>{{ error }}</p>
+        {% endfor %}
+      </div>
+      {% endif %}
       <hr class="my-2">
       <div class="d-flex justify-content-between align-items-center">
-        <div>
-          <!-- 画像アイコン(非表示のinputと紐づいている) -->
-          <label for="fileInput" style="cursor: pointer">
-            <i class="bi bi-image text-primary"></i>
-          </label>
-          <!-- 非表示のファイル入力エリア -->
-          <input type="file" id="fileInput" class="form-control d-none">
+        <!-- 画像アイコン(非表示のinputと紐づいている) -->
+        <label for="{{ form.image.id_for_label }}" class="form-label" style="cursor: pointer">
+          <i class="bi bi-image text-primary"></i>
+        </label>
+        <!-- 非表示のファイル入力エリア -->
+        {{ form.image }}
+        {% if form.image.errors %}
+        <div class="text-danger">
+          {% for error in form.image.errors %}
+          <p>{{ error }}</p>
+          {% endfor %}
         </div>
+        {% endif %}
         <button type="submit" class="btn btn-primary rounded-pill fw-bold px-3">ツイートする</button>
-      </form>
-    </div>
+      </div>
+    </form>
   </div>
-  </div>
+</div>
