--- a/templates/profiles/liked_tweets.html
+++ b/templates/profiles/liked_tweets.html
@@ -16,7 +16,7 @@
   <div>
     {% if tweet_list %}
       {% for tweet in tweet_list %}
-        {% include "profiles/_tweet.html" %}
+        {% include "tweets/_tweet.html" %}
       {% endfor %}
     {% else %}
       <div class="mt-5">
