--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -53,13 +53,7 @@
           class="rounded-circle me-2"
         />
         <div>
-          <div class="fw-bold">
-            {% if user.name %}
-              {{ user.name }}
-            {% else %}
-              {{ user.username }}
-            {% endif %}
-          </div>
+          <div class="fw-bold">{{ user.display_name }}</div>
           <small class="text-secondary">@{{ user.username }}</small>
         </div>
       </div>
