--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -17,46 +17,7 @@
   </div>
 
   <!-- ツイート詳細 -->
-  <div class="pb-3 border-bottom border-secondary">
-    <div class="d-flex pt-2 mb-3">
-      <!-- プロフィール画像 -->
-      <a href="{% url 'profiles:my_tweet_list' tweet.user.username %}">
-        <img
-          src="{{ tweet.user.icon_image_url }}"
-          alt="ユーザーイメージ"
-          width="40"
-          height="40"
-          class="rounded-circle me-2"
-        />
-      </a>
-      <!-- プロフィール名など -->
-      <div class="flex-grow-1">
-        <div class="d-flex justify-content-between align-items-start">
-          <div>
-            <span class="fw-bold d-block">{{ tweet.user.display_name }}</span>
-            <span class="text-secondary">@{{ tweet.user.username }}</span>
-          </div>
-          <div>
-            <i class="bi bi-three-dots"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- ツイート本文 -->
-    <div>
-      <p>{{ tweet.content }}</p>
-      <!-- 投稿画像があれば表示 -->
-      {% if tweet.resized_image_url %}
-        <div class="mb-3">
-          <img
-            src="{{ tweet.resized_image_url }}"
-            alt="投稿画像"
-          />
-        </div>
-      {% endif %}
-      <div class="text-secondary fs-6">{{ tweet.created_at|date:"Y年n月j日・g:i" }}</div>
-    </div>
-  </div>
+  {% include "tweets/_tweet_detail.html" %}
 
   <!-- アイコンエリア -->
   <div class="border-bottom border-secondary">
@@ -71,68 +32,14 @@
 
   <!-- コメントフォームエリア -->
   <div class="py-3">
-    <form method="POST" action="{% url "tweets:comment_create" tweet.pk %}" enctype="multipart/form-data" novalidate>
-      {% csrf_token %}
-      <div class="d-flex align-items-center gap-3">
-        <!-- ログインユーザーのアイコン -->
-        <a href="{% url "profiles:my_tweet_list" user.username %}">
-          <img
-            src="{{ user.icon_image_url }}"
-            alt="ユーザーイメージ"
-            width="40"
-            height="40"
-            class="rounded-circle"
-          />
-        </a>
-        <!-- 入力エリア -->
-        <div class="flex-grow-1">
-          {{ form.content }}
-          {% if form.content.errors %}
-          <div class="text-danger">
-            {% for error in form.content.errors %}
-            <p>{{ error }}</p>
-            {% endfor %}
-          </div>
-          {% endif %}
-        </div>
-        <!-- 送信ボタン -->
-        <button
-          type="submit"
-          class="btn btn-light rounded-pill px-4 fw-bold text-nowrap"
-          role="button">
-          返信
-        </button>
-      </div>
-    </form>
+    {% include "tweets/_commentform.html" %}
   </div>
 </div>
 
 <!-- コメント一覧エリア -->
-{% if tweet.comments.exists %}
+<div>
   {% for comment in tweet.comments.all %}
-    <div class="d-flex px-3 py-2 border border-secondary">
-      <!-- コメントユーザーのアイコン -->
-      <a href="{% url 'profiles:my_tweet_list' comment.user.username %}">
-        <img
-          src="{{ comment.user.icon_image_url }}"
-          alt="ユーザーイメージ"
-          width="40"
-          height="40"
-          class="rounded-circle me-2"
-        />
-      </a>
-      <!-- コメント内容 -->
-      <div class="flex-grow-1">
-        <div class="d-flex align-items-center gap-1">
-          <div class="fw-bold">{{ comment.user.display_name }}</div>
-          <small class="text-secondary">
-            @{{ comment.user.username }}・{{ comment.created_at|date:"m月d日 H:i" }}
-          </small>
-        </div>
-        <div>{{ comment.content }}</div>
-      </div>
-    </div>
+    {% include "tweets/_comment.html" %}
   {% endfor %}
-{% endif %}
-
+</div>
 {% endblock content %}
