🎨 ツイートのユーザー名表示を改善し、表示名を使用するように変更

--- a/templates/tweets/_tweet.html
+++ b/templates/tweets/_tweet.html
@@ -15,13 +15,7 @@
     </a>
     <div class="flex-grow-1">
       <div class="d-flex align-items-center gap-1">
-        <div class="fw-bold">
-          {% if tweet.user.name %}
-            {{ tweet.user.name }}
-          {% else %}
-            {{ tweet.user.username }}
-          {% endif %}
-        </div>
+        <div class="fw-bold">{{ tweet.user.display_name }}</div>
         <small class="text-secondary">
           @{{ tweet.user.username }}・{{ tweet.created_at|date:"m月d日 H:i" }}
         </small>
