--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 
 {% block title %}ツイート詳細ページ{% endblock title %}
 
@@ -24,7 +25,16 @@
     <div class="d-flex justify-content-between align-items-center p-2">
       <i class="bi bi-chat"></i>
       <i class="bi bi-repeat"></i>
-      <i class="bi bi-heart"></i>
+      <div class="d-flex align-items-center gap-2">
+        <form method="POST" action="{% url 'tweets:like_toggle' %}">
+          {% csrf_token %}
+          <input type="hidden" name="tweet_id" value="{{ tweet.id }}">
+          <button type="submit" class="btn text-secondary">
+            <i class="bi bi-heart"></i>
+            <span>{{ tweet.likes.count|intcomma|default:0 }}</span>
+          </button>
+        </form>
+      </div>
       <i class="bi bi-bookmark"></i>
       <i class="bi bi-upload"></i>
     </div>
