--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -21,23 +21,8 @@
   {% include "tweets/_tweet_detail.html" %}
 
   <!-- アイコンエリア -->
-  <div class="border-bottom border-secondary">
-    <div class="d-flex justify-content-between align-items-center p-2">
-      <i class="bi bi-chat"></i>
-      <i class="bi bi-repeat"></i>
-      <div class="d-flex align-items-center gap-2">
-        <form method="POST" action="{% url 'tweets:like_toggle' %}">
-          {% csrf_token %}
-          <input type="hidden" name="tweet_id" value="{{ tweet.id }}">
-          <button type="submit" class="btn text-secondary">
-            <i class="bi bi-heart"></i>
-            <span>{{ tweet.likes.count|intcomma|default:0 }}</span>
-          </button>
-        </form>
-      </div>
-      <i class="bi bi-bookmark"></i>
-      <i class="bi bi-upload"></i>
-    </div>
+  <div class="border-bottom border-secondary p-2">
+    {% include "tweets/_tweet_action_icons.html" %}
   </div>
 
   <!-- コメントフォームエリア -->
