🔧 ツイート詳細ページでコメントの取得方法を修正し、ユーザー情報を含めるように変更

--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load humanize %}
 
 {% block title %}ツイート詳細ページ{% endblock title %}
 
@@ -33,7 +32,7 @@
 
 <!-- コメント一覧エリア -->
 <div>
-  {% for comment in comment_list %}
+  {% for comment in tweet.comments.all %}
     {% include "tweets/_comment.html" %}
   {% endfor %}
 </div>
