--- a/templates/tweets/index.html
+++ b/templates/tweets/index.html
@@ -11,7 +11,7 @@
 </div>
 <div>
   {% for tweet in tweet_list  %}
-    {% include "tweets/_tweet.html" with tweet=tweet %}
+    {% include "tweets/_tweet.html" %}
   {% endfor %}
 </div>
 <div class="mt-3">
