🎨 コンテキスト変数tweetからデータ取得する形式に変更

--- a/templates/tweets/_tweet_action_icons.html
+++ b/templates/tweets/_tweet_action_icons.html
@@ -8,7 +8,7 @@
     <input type="hidden" name="tweet_id" value="{{ tweet.id }}" />
     <button
       type="submit"
-      class="btn {% if tweet_is_retweeted_by_user %}text-success{% else %}text-white{% endif %} hover-text-success">
+      class="btn {% if tweet.is_retweeted_by_user %}text-success{% else %}text-white{% endif %} hover-text-success">
       <i class="bi bi-repeat me-1"></i>
       <span>{{ tweet.retweets.count|intcomma|default:0 }}</span>
     </button>
@@ -19,8 +19,8 @@
     <input type="hidden" name="tweet_id" value="{{ tweet.id }}" />
     <button
       type="submit"
-      class="btn {% if tweet_is_liked_by_user %}text-danger{% else %}text-white{% endif %} hover-text-danger">
-      {% if tweet_is_liked_by_user %}
+      class="btn {% if tweet.is_liked_by_user %}text-danger{% else %}text-white{% endif %} hover-text-danger">
+      {% if tweet.is_liked_by_user %}
         <i class="bi bi-heart-fill me-1"></i>
       {% else %}
         <i class="bi bi-heart me-1"></i>
