--- a/templates/tweets/index.html
+++ b/templates/tweets/index.html
@@ -6,7 +6,7 @@
 <div class="p-1 border-bottom border-secondary">
   {% include "tweets/_tabs.html" %}
 </div>
-<div class="p-2 border-bottom border-secondary">
+<div class="p-3 pb-2 border-bottom border-secondary">
   {% include "tweets/_tweetform.html" %}
 </div>
 <div>
