🎨 サイドバーにアイコンのみのバージョンを追加し、レスポンシブデザインを調整

--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -1,3 +1,4 @@
+<!-- アイコンとアイコン名のサイドバー -->
 <nav class="d-flex flex-column pt-3 text-white">
   <ul class="nav flex-column gap-2 mb-4 fs-5">
     <li class="nav-item">
