--- a/templates/_sidebar_icons_only.html
+++ b/templates/_sidebar_icons_only.html
@@ -12,7 +12,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link text-white">
+      <a href="{% url "direct_messages:message_list" %}" class="nav-link text-white">
         <i class="bi bi-envelope"></i>
       </a>
     </li>
